--- a/index.html
+++ b/index.html
@@ -376,8 +376,14 @@
   </head>
 <body onload="load_rama();update_rama();">
 
-    <center><font size="6"><b> Amino Acid Collision Viewer with live Ramachandran plot. </b> </font></center>
-    <center>
+
+     <center><font size="10"> Amino Acid Collision Viewer with Live Ramachandran Plot </font></center>
+
+     <center><div style="font-size:130%;text-align:center;font-weight:bold;"> Phi (φ) and Psi (ψ) Angles in Proteins </div></center>
+     
+     <center><font size="4"> Authors: Emanuel Arcena, Shonel Rahim, Nelson Lim </font></center>
+     <br></br>
+	<center>
     <div class = "plotBox">
 			<div>
 			  <h2 style = "color : black;">Ramachandran plot:</h2>
