--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
      <center><div style="font-size:130%;text-align:center;font-weight:bold;"> Phi (φ) and Psi (ψ) Angles in Proteins </div></center>
      
-     <center><font size="4"> Authors: Emanuel Arcena, Shonel Rahim, Nelson Lim </font></center>
+     <center><font size="4"> Authors: Emanuel Aracena Beriguete, Shonel Rahim, Nelson Lim </font></center>
      <br></br>
 	<center>
     <div class = "plotBox">
